--- a/app/src/main/res/layout/vacation_item.xml
+++ b/app/src/main/res/layout/vacation_item.xml
@@ -13,6 +13,13 @@
         android:textSize="16sp" />
 
     <Button
+        android:id="@+id/updateButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View or Update"
+        android:layout_marginRight="5dp" />
+
+    <Button
         android:id="@+id/deleteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
