--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,15 +9,32 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Welcome to Vacation Tracker!"
-        android:textSize="24sp"
-        android:layout_centerHorizontal="true"/>
-    <Button
-        android:id="@+id/vacationListButton"
+        android:textSize="45sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_centerInParent="true"/>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View Vacations"
-        android:onClick="openVacationList"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="30dp"/>
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="30dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/vacationListButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="View Vacations"
+            android:onClick="openVacationList"
+            android:layout_marginRight="16dp"/>
+
+        <Button
+            android:id="@+id/excursionListButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="View Excursions"
+            android:onClick="openExcursionList"/>
+    </LinearLayout>
 </RelativeLayout>
