--- a/app/src/main/res/layout/excursion_item.xml
+++ b/app/src/main/res/layout/excursion_item.xml
@@ -1,4 +1,3 @@
-<!-- vacation_item.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,17 +12,10 @@
         android:textSize="16sp" />
 
     <Button
-        android:id="@+id/viewButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View"
-        android:layout_marginRight="5dp" />
-
-    <Button
         android:id="@+id/updateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Update"
+        android:text="View or Update"
         android:layout_marginRight="5dp" />
 
     <Button
