Completed B3, created the share button for each vacation item so that the vacation details can be shared

--- a/app/src/main/res/layout/view_vacation.xml
+++ b/app/src/main/res/layout/view_vacation.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Vacation Information:"
+        android:textStyle="bold"
         android:textSize="24sp"
         android:padding="10dp" />
 
@@ -22,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Excursions:"
+        android:textStyle="bold"
         android:textSize="24sp"
         android:padding="10dp" />
 
