--- a/app/src/main/res/layout/excursion_item.xml
+++ b/app/src/main/res/layout/excursion_item.xml
@@ -1,4 +1,3 @@
-<!-- excursion_item.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,23 +12,20 @@
         android:gravity="center_horizontal"
         android:layout_marginBottom="8dp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/updateButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
+        android:text="View or Update"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="8dp" />
 
-        <Button
-            android:id="@+id/updateButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="View or Update"
-            android:layout_marginRight="5dp" />
+    <ImageView
+        android:id="@+id/deleteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/delete"
+        android:layout_gravity="center_horizontal"
+        android:background="?android:attr/selectableItemBackground" />
 
-        <Button
-            android:id="@+id/deleteButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Delete" />
-    </LinearLayout>
 </LinearLayout>
