--- a/app/src/main/res/layout/vacation_item.xml
+++ b/app/src/main/res/layout/vacation_item.xml
@@ -1,4 +1,3 @@
-<!-- vacation_item.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -34,9 +33,20 @@
             android:layout_marginRight="5dp" />
 
         <Button
-            android:id="@+id/deleteButton"
+            android:id="@+id/shareButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Delete" />
+            android:text="Share" />
+
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/deleteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/delete"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="8dp"
+        android:background="?android:attr/selectableItemBackground" />
+
 </LinearLayout>
